syntax = "proto3";
package pubsub;

service PubSub {
    // Our SayHello rpc accepts HelloRequests and returns HelloReplies
    rpc publish (PublishBatchRequest) returns (PublishResponse);
}

message PublishBatchRequest {
    repeated PublishRequest requests = 1;
}

message PublishRequest {
    string topic_name = 1;
    uint32 partition = 2;
    bytes message = 3;
}

message PublishResponse {
    int32 code = 3;
    string description = 4;
}
